add readme file

--- a/projetg1g2/frontend/templates/Home.html
+++ b/projetg1g2/frontend/templates/Home.html
@@ -10,5 +10,7 @@
 </head>
 <body>
     <h1 class="title "> Projet G1 / G2</h1>
+
+    <script src="{% static 'js/script.jsx' }"></script>
 </body>
 </html>
