--- a/projetg1g2/frontend/templates/Home.html
+++ b/projetg1g2/frontend/templates/Home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/Home.css' %}">
     <title>Home</title>
+    <script src="{% static 'js/Home.js' %}"></script>
 </head>
 <body>
     <h1 class="title "> Projet G1 / G2</h1>
