display and filter weather data

--- a/projetg1g2/frontend/templates/Dashboard.html
+++ b/projetg1g2/frontend/templates/Dashboard.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="{% static 'css/Dashboard.css' %}">
-    <script src="{% static 'js/Dashboard.jsx' }"></script>
+    <script src="{% static 'js/Dashboard.js' %}"></script>
 </head>
 <body>
     <h1>Dashboard</h1>
