--- a/projetg1g2/frontend/templates/Live_Predictions.html
+++ b/projetg1g2/frontend/templates/Live_Predictions.html
@@ -16,7 +16,26 @@
     <p id="country"></p>
     <p id="state"></p>
     <p id="city"></p>
-    <p id="temp"></p>
+    <p id="temperature"></p>
+    <p id="snowfall"></p>
+    <p id="snowdepth"></p>
+    <p id="wind"></p>
+    <div id="button-container"></div>
+    <label for="hour-input">Hour (0-23): </label>
+    <input type="number" id="hour-input" min="0" max="23" value="0">
+    <p id="temperature-display"></p>
+
+    <div id="day-container">
+        <label>Select Day:</label>
+        <label><input type="radio" name="day" value="0" checked> Day 1 (today)</label>
+        <label><input type="radio" name="day" value="1"> Day 2</label>
+        <label><input type="radio" name="day" value="2"> Day 3</label>
+        <label><input type="radio" name="day" value="3"> Day 4</label>
+        <label><input type="radio" name="day" value="4"> Day 5</label>
+        <label><input type="radio" name="day" value="5"> Day 6</label>
+        <label><input type="radio" name="day" value="6"> Day 7</label>
+    </div>
+
     <div id="map"></div>
 
 
