add apis template

--- a/projetg1g2/frontend/templates/Home.html
+++ b/projetg1g2/frontend/templates/Home.html
@@ -17,6 +17,9 @@
     <a href="{% url 'Dashboard' %}">Dashboard</a>
 
     <a href="{%url 'Model_inputs' %}">model input</a>
+    <a href="{%url 'apis' %}">APIs</a>
+
+
 
     
 </body>
