--- a/projetg1g2/frontend/templates/Model_inputs.html
+++ b/projetg1g2/frontend/templates/Model_inputs.html
@@ -11,5 +11,7 @@
 </head>
 <body>
     <h1>Model_inputs</h1>
+
+    <input type="text" placeholder="Search for an airoport " name="q" class="search-bar" value="{{ search_query }}">
 </body>
 </html>
