--- a/projetg1g2/frontend/templates/Model_inputs.html
+++ b/projetg1g2/frontend/templates/Model_inputs.html
@@ -18,7 +18,7 @@
     </form>
 
     
-    {% for airport, temp in temp_data %}
+    {% for airport, temp ,snowfall,snow_depth,wind_speed_10m in temp_data %}
     <div>
         <p><strong>Airport:</strong> {{ airport.name }}</p>
         <canvas id="chart-{{ forloop.counter }}"></canvas>
@@ -26,11 +26,32 @@
             var ctx = document.getElementById('chart-{{ forloop.counter }}').getContext('2d');
             var labels = [];
             var data = [];
+            var data_snowfall=[]
+            var data_snow_depth=[]
+            var data_speed_10m=[]
             
             {% for day, temps in temp.items %}
                 {% for t in temps %}
                     labels.push("{{ day }} {{ forloop.counter0 }}");
                     data.push({{ t }});
+                {% endfor %}
+            {% endfor %}
+
+            {% for day, snowfalls in snowfall.items %}
+                {% for snowf in snowfalls %}
+                    data_snowfall.push({{ snowf}});
+                {% endfor %}
+            {% endfor %}
+
+            {% for day, snow_depths in snow_depth.items %}
+                {% for snow_dep in snow_depths %}
+                    data_snow_depth.push({{ snow_dep}});
+                {% endfor %}
+            {% endfor %}
+
+            {% for day, winds in wind_speed_10m.items %}
+                {% for win in winds %}
+                    data_speed_10m.push({{ win}});
                 {% endfor %}
             {% endfor %}
 
@@ -42,6 +63,24 @@
                         label: 'Temperature',
                         data: data,
                         borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1,
+                        fill: false
+                    },{
+                        label: 'Snowfall',
+                        data: data_snowfall,
+                        borderColor: 'rgba(75, 100, 192, 1)',
+                        borderWidth: 1,
+                        fill: false
+                    },{
+                        label: 'snow_depth',
+                        data: data_snow_depth,
+                        borderColor: 'rgba(75, 100, 80, 1)',
+                        borderWidth: 1,
+                        fill: false
+                    },{
+                        label: 'wind_speed',
+                        data: data_speed_10m,
+                        borderColor: 'rgba(75, 50, 50, 1)',
                         borderWidth: 1,
                         fill: false
                     }]
@@ -57,7 +96,7 @@
                         y: {
                             title: {
                                 display: true,
-                                text: 'Temperature (°C)'
+                                text: 'value'
                             }
                         }
                     }
