--- a/projetg1g2/frontend/templates/Live_Predictions.html
+++ b/projetg1g2/frontend/templates/Live_Predictions.html
@@ -20,6 +20,7 @@
     <p id="snowfall"></p>
     <p id="snowdepth"></p>
     <p id="wind"></p>
+    <p id="preds1"></p>
     <div id="button-container"></div>
     <label for="hour-input">Hour (0-23): </label>
     <input type="number" id="hour-input" min="0" max="23" value="0">
