--- a/projetg1g2/frontend/static/css/Live_Predictions.css
+++ b/projetg1g2/frontend/static/css/Live_Predictions.css
@@ -1,5 +1,38 @@
+
 #map {
-    height: 600px;
+    height: 100vh;
     width: 100%;
+    
+}
+#sidebar{
+    position: fixed;
+    z-index: 1000;
+    background-color: rgb(37, 35, 35);
+    color: aliceblue;
+    padding: 15px;
+    border-radius: 15px;
+}
+#sidebar img {
+    width: 15px;
+    cursor: pointer;
+}
+#day-container{
+    position: fixed;
+    top:90vh;
+    left: 35%;
+    z-index: 10001;
+    background-color: rgb(37, 35, 35);
+    border-radius: 15px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    display: flex;
+    gap:30px;
+    font-size: 18px;
+    
+}
+#day-container label {
+    color: aliceblue;
     
 }
