--- a/projetg1g2/frontend/templates/Live_Predictions.html
+++ b/projetg1g2/frontend/templates/Live_Predictions.html
@@ -12,21 +12,23 @@
 <body>
     
     <h1 >Live Predictions</h1>
-    <h2 id="sidebar-title"></h2>
-    <p id="country"></p>
-    <p id="state"></p>
-    <p id="city"></p>
-    <p id="temperature"></p>
-    <p id="snowfall"></p>
-    <p id="snowdepth"></p>
-    <p id="wind"></p>
-    <p id="preds1"></p>
-    <div id="button-container"></div>
+    <div id="sidebar">
+        <img src="{% static 'assets/cross.svg' %}" >
+        <h2 id="sidebar-title"></h2>
+        <p id="country"></p>
+        <p id="state"></p>
+        <p id="city"></p>
+        <p id="temperature"></p>
+        <p id="snowfall"></p>
+        <p id="snowdepth"></p>
+        <p id="wind"></p>
+        <p id="preds1"></p>
+        <div id="button-container"></div>
+        <p id="temperature-display"></p>
+    </div>
+    
     <label for="hour-input">Hour (0-23): </label>
     <input type="number" id="hour-input" min="0" max="23" value="0">
-    <p id="temperature-display"></p>
-
-    
 
     <div id="day-container">
         <label>Select Day:</label>
