--- a/projetg1g2/frontend/static/css/Live_Predictions.css
+++ b/projetg1g2/frontend/static/css/Live_Predictions.css
@@ -11,10 +11,29 @@
     color: aliceblue;
     padding: 15px;
     border-radius: 15px;
+    font-size: 18px;
+    margin-left: 35px;
+    height: 100%;
+    display: block;
+    
+
 }
+
 #sidebar img {
     width: 15px;
     cursor: pointer;
+}
+#sidebar p {
+    margin-top: 10px;
+    background-color: rgb(70, 67, 67);
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 10px;
+}
+#sidebar p:hover{
+    transform: scale(1.2,1.2);
 }
 #day-container{
     position: fixed;
@@ -35,4 +54,32 @@
 #day-container label {
     color: aliceblue;
     
+}
+#hourblock{
+    position: fixed;
+    left: 50%;
+    top:83vh;
+    z-index: 10002;
+    font-size: 18px;
+    background-color: rgb(37, 35, 35);
+    border-radius: 15px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    color: aliceblue;
+}
+#slider-container{
+    position: fixed;
+    left: 40%;
+    top:2vh;
+    z-index: 10003;
+    font-size: 18px;
+    background-color: rgb(37, 35, 35);
+    border-radius: 15px;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-right: 15px;
+    color: aliceblue;
 }
