--- a/projetg1g2/frontend/templates/Live_Predictions.html
+++ b/projetg1g2/frontend/templates/Live_Predictions.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     
-    <h1 >Live Predictions</h1>
+    
     <div id="sidebar">
-        <img src="{% static 'assets/cross.svg' %}" >
+        <img src="{% static 'assets/cross.svg' %}" id="cross"/>
         <h2 id="sidebar-title"></h2>
         <p id="country"></p>
         <p id="state"></p>
@@ -24,11 +24,13 @@
         <p id="wind"></p>
         <p id="preds1"></p>
         <div id="button-container"></div>
-        <p id="temperature-display"></p>
+        
     </div>
     
+    <div id="hourblock">
     <label for="hour-input">Hour (0-23): </label>
     <input type="number" id="hour-input" min="0" max="23" value="0">
+    </div>
 
     <div id="day-container">
         <label>Select Day:</label>
